# bigiris

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  rustfmt.toml
.github/workflows/: ci.yml
crates/bigimage-ai/: Cargo.toml
crates/bigimage-ai/src/: background.rs  download.rs  lib.rs
crates/bigimage-core/: Cargo.toml
crates/bigimage-core/src/: adjust.rs  animate.rs  convert.rs  crop.rs  encode.rs  flip.rs  format.rs  lib.rs  metadata.rs  pipeline.rs  preview.rs  resize.rs  rotate.rs
crates/bigimage-integrations/: Cargo.toml
crates/bigimage-integrations/src/: action.rs  dolphin.rs  install.rs  lib.rs  nautilus.rs  nemo.rs  pantheon.rs  pcmanfm_qt.rs  safe_fs.rs  scope.rs  thunar.rs
crates/bigiris/: Cargo.toml
crates/bigiris/src/: gui.rs  main.rs
crates/bigiris/src/gui/: batch_runner.rs
data/: com.biglinux.Iris.desktop  com.biglinux.Iris.gschema.xml  com.biglinux.Iris.metainfo.xml
data/nautilus/: bigiris-menu.py
data/po/: LINGUAS  POTFILES.in  bigiris.pot  en.po  regen-pot.sh
docs/: ADR-001-core-separates-gui-cli.md  ADR-002-glycin-gui-purerust-cli.md  ADR-003-single-binary-multi-module.md  DESIGN-M2.md  IA-LOCAL.md
docs/icon-iterations/: com.biglinux.Iris.svg.v1-backup
docs/screenshots/: README.md
pkgbuild/: PKGBUILD  PKGBUILD.local  bigiris.install
