[package]
name = "bigimage-integrations"
description = "File manager service menu installer for BigIris (Dolphin/Nautilus/Nemo/Thunar/PCManFM/Files)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile = "3"
