[package]
name = "bigiris"
description = "Modern image viewer and converter for Linux (BigLinux family)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
default-run = "bigiris"

[[bin]]
name = "bigiris"
path = "src/main.rs"

[dependencies]
bigimage-core = { path = "../bigimage-core" }
bigimage-ai = { path = "../bigimage-ai" }
bigimage-integrations = { path = "../bigimage-integrations" }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
color-eyre.workspace = true
gtk4 = { workspace = true, optional = true }
libadwaita = { workspace = true, optional = true }
# Always-on: remove-bg (CLI + dialog) opens/saves images via `image::open`,
# and the GIF animate path needs it too. Compile cost is shared anyway
# because `bigimage-core` already pulls it in.
image.workspace = true

[dev-dependencies]
tempfile = "3"

[features]
# Off by default so CI and headless builds stay lean (no GTK/libadwaita
# system libs required). The PKGBUILD and README install instructions
# pass `--features "gui ai"` explicitly for end-user installs.
default = []
# Enable AI backend (ORT + models). Requires `onnxruntime` at runtime
# (Arch: `pacman -S onnxruntime`).
ai = ["bigimage-ai/onnx"]
# Enable GTK4 / libadwaita viewer.
gui = ["dep:gtk4", "dep:libadwaita"]
